--- a/app/chef_rails/Gemfile
+++ b/app/chef_rails/Gemfile
@@ -4,7 +4,7 @@ source 'https://rubygems.org'
 gem 'rails', '4.1.0'
 
 # Use mysql as the database for Active Record
-gem 'mysql2'
+#gem 'mysql2'
 
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.2'
@@ -43,4 +43,3 @@ end
 
 # Use debugger
 # gem 'debugger', group: [:development, :test]
-gem 'therubyracer', platforms: :ruby
