--- a/app/chef_rails/config/database.yml
+++ b/app/chef_rails/config/database.yml
@@ -9,13 +9,9 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
-  encoding: utf8
+  adapter: sqlite3
   database: chef_rails_development
   pool: 5
-  username: root
-  password:
-  socket: /var/lib/mysql/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
